--- a/py_course/oops.ipynb
+++ b/py_course/oops.ipynb
@@ -2345,6 +2345,267 @@
     "        \n",
     "customer().__dict__"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#23/11/2023\n",
+    "ENCHAPSULATION:\n",
+    "1. It is a phenomenon of hiding the data in the class.\n",
+    "2. Restrict the states and behavioures in the class.\n",
+    "3.Provide security to the data.\n",
+    "4. Restrict the states and behaviours for class and objects by help of access specifiers or access modifiers.\n",
+    "\n",
+    "access specifieres:\n",
+    "*. access specifiers are classified into 3 types\n",
+    "    1.public\n",
+    "    2.protected       (public and protect both are same)\n",
+    "    3.private"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "#1.public members(states)\n",
+    "class sample:\n",
+    "    x=10  #public state\n",
+    "\n",
+    "    @classmethod\n",
+    "    def display(cls):  #public behaviour\n",
+    "        print(cls.x)\n",
+    "\n",
+    "print(sample.x)\n",
+    "sample.display()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "100\n"
+     ]
+    }
+   ],
+   "source": [
+    "#1.public members(states)\n",
+    "class sample:\n",
+    "    x=10                   #public state\n",
+    "\n",
+    "    @classmethod\n",
+    "    def display(cls):      #public behaviour\n",
+    "        print(cls.x)\n",
+    "\n",
+    "print(sample.x)\n",
+    "sample.x=100               #modify public states outside the class\n",
+    "sample.display()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "#2.protect members(states)\n",
+    "class sample:\n",
+    "    _x=10  #protect state\n",
+    "\n",
+    "    @classmethod\n",
+    "    def _display(cls):  #protect behaviour\n",
+    "        print(cls._x)\n",
+    "\n",
+    "print(sample._x)\n",
+    "sample._display()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "100\n"
+     ]
+    }
+   ],
+   "source": [
+    "#2.protect members(states)\n",
+    "class sample:\n",
+    "    _x=10                   #protectc state\n",
+    "\n",
+    "    @classmethod\n",
+    "    def _display(cls):      #public behaviour\n",
+    "        print(cls._x)\n",
+    "\n",
+    "print(sample._x)\n",
+    "sample._x=100               #modify protect states outside the class\n",
+    "sample._display()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "type object 'sample' has no attribute '__x'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\Shaik Imran\\OneDrive\\Documents\\GitHub\\BASIC_PYTHON\\py_course\\oops.ipynb Cell 72\u001b[0m line \u001b[0;36m9\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#Y131sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     \u001b[39m@classmethod\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#Y131sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     \u001b[39mdef\u001b[39;00m \u001b[39m__display\u001b[39m(\u001b[39mcls\u001b[39m):  \u001b[39m#private behaviour\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#Y131sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m         \u001b[39mprint\u001b[39m(\u001b[39mcls\u001b[39m\u001b[39m.\u001b[39m__x)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#Y131sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39mprint\u001b[39m(sample\u001b[39m.\u001b[39;49m__x)      \u001b[39m#we cannot access private members outside the class\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#Y131sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m sample\u001b[39m.\u001b[39m__display()\n",
+      "\u001b[1;31mAttributeError\u001b[0m: type object 'sample' has no attribute '__x'"
+     ]
+    }
+   ],
+   "source": [
+    "#3.privte members(states)\n",
+    "class sample:\n",
+    "    __x=10  #private state\n",
+    "\n",
+    "    @classmethod\n",
+    "    def __display(cls):  #private behaviour\n",
+    "        print(cls.__x)\n",
+    "\n",
+    "print(sample.__x)      #we cannot access private members outside the class\n",
+    "sample.__display()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "mappingproxy({'__module__': '__main__',\n",
+       "              '_sample__x': 10,\n",
+       "              '_sample__display': <classmethod(<function sample.__display at 0x00000150226397E0>)>,\n",
+       "              '__dict__': <attribute '__dict__' of 'sample' objects>,\n",
+       "              '__weakref__': <attribute '__weakref__' of 'sample' objects>,\n",
+       "              '__doc__': None})"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class sample:\n",
+    "    __x=10  \n",
+    "\n",
+    "    @classmethod\n",
+    "    def __display(cls): \n",
+    "        print(cls.__x)\n",
+    "\n",
+    "print(sample._sample__x)   #but we can access \\n NOTE: nothing is hidded in pythod\n",
+    "sample.__dict__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "getter and setter method\n",
+    "1.Getter method:\n",
+    "     It is a class/object behaviour to access the private members(states) within the class/object\n",
+    "2.Setter method:\n",
+    "     It is a class/object behaviour to modify the private members(states) within the class/object\n",
+    "NOte:\n",
+    "     setter/getter method should be public behaviours"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "40\n",
+      "150\n"
+     ]
+    }
+   ],
+   "source": [
+    "class outer:\n",
+    "    __m=40\n",
+    "\n",
+    "    @classmethod\n",
+    "    def display(cls):        #getter method\n",
+    "        print(cls.__m)\n",
+    "\n",
+    "    @classmethod\n",
+    "    def modify(cls):             #setter method\n",
+    "        cls.__m=150\n",
+    "\n",
+    "outer.display()\n",
+    "outer.modify()\n",
+    "outer.display()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Polimorphism:\n",
+    "    poly means many\n",
+    "    morphis means forms(types)\n",
+    "Polimorphism is one of the features of oops.\n",
+    "    . It is an ability of a programming language to present the same interface for several different functionalities operations.\n",
+    "    . It is an ability to perform many tasks.\n",
+    "    . In terms of programming, it means reusing a single program it will work in multiple ways and multiple times.\n",
+    "    . It is the ability of an object or instance to take many forms in different instances.\n",
+    "    . It impliments the concept of \n",
+    "            > Method overloading\n",
+    "            > Method overriding\n",
+    "            > Operator overloading and\n",
+    "            > Virtual functions.\n"
+   ]
   }
  ],
  "metadata": {
