--- a/py_course/assignment.ipynb
+++ b/py_course/assignment.ipynb
@@ -2575,7 +2575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -2584,7 +2584,9 @@
      "text": [
       "0 1\n",
       "1 2\n",
-      "2 3\n"
+      "2 3\n",
+      "49\n",
+      "b'10'\n"
      ]
     }
    ],
@@ -2594,9 +2596,11 @@
     "#     # print(i)\n",
     "# print(ord(a))\n",
     "a=b'101'   \n",
-    "for i in range(0,len(a)):\n",
-    "    \n",
-    "    print(i,i+1)"
+    "for i in range(0,len(a)):    \n",
+    "    print(i,i+1)\n",
+    "# a[0]=34\n",
+    "print(a[0])\n",
+    "print(a[0:2])"
    ]
   },
   {
@@ -2646,7 +2650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -2661,6 +2665,26 @@
     "import copy\n",
     "a={33,44,55}\n",
     "b=a.copy()\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{33, 44, 55}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import copy\n",
+    "a={33,44,55}\n",
+    "b=copy.deepcopy(a)\n",
     "print(b)"
    ]
   }
