--- a/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/practice.ipynb
+++ b/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/practice.ipynb
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +696,7 @@
     }
    ],
    "source": [
-    "def feb(num):\n",
+    "def feb(num):  #using recursion\n",
     "    if num<=1:\n",
     "        return 1\n",
     "    else:\n",
@@ -706,27 +706,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "75025\n",
-      "{0: 1, 1: 1, 2: 2, 3: 3, 4: 5, 5: 8, 6: 13, 7: 21, 8: 34, 9: 55, 10: 89, 11: 144, 12: 233, 13: 377, 14: 610, 15: 987, 16: 1597, 17: 2584, 18: 4181, 19: 6765, 20: 10946, 21: 17711, 22: 28657, 23: 46368, 24: 75025}\n"
+      "3\n",
+      "{0: 1, 1: 1, 2: 2, 3: 3}\n"
      ]
     }
    ],
    "source": [
-    "def febonacy(num,dic):\n",
+    "def febonacy(num,dic):    #using recursion\n",
     "    if num  in dic:\n",
     "        return dic[num]\n",
     "    else:\n",
-    "        dic[num]=febonacy(num-2,dic)+febonacy(num-1,dic) #increase in space-complixity\n",
+    "        dic[num]=febonacy(num-2,dic)+febonacy(num-1,dic) #increase in space-complexity\n",
     "        return dic[num]                                  #takes more storage(memory) \n",
     "dic={0:1,1:1}\n",
-    "print(febonacy(24,dic))\n",
+    "print(febonacy(3,dic))\n",
     "print(dic)"
    ]
   },
@@ -861,6 +861,36 @@
     "    print(f'{temp} is polindrome')\n",
     "else:\n",
     "    print(f'{temp} is not polindrome')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "not a polindrome\n",
+      "polindrome\n",
+      "polindrome\n"
+     ]
+    }
+   ],
+   "source": [
+    "def polindrom(coll):        #polindrome using recursion\n",
+    "    if len(coll)<=1:\n",
+    "        print('polindrome')\n",
+    "    else:\n",
+    "        if coll[0]==coll[-1]:\n",
+    "            polindrom(coll[1:-1])\n",
+    "        else:\n",
+    "            print('not a polindrome')\n",
+    "polindrom('madamm')\n",
+    "polindrom('madam')\n",
+    "polindrom('abba')\n",
+    "        "
    ]
   },
   {
