--- a/py_course/functional_pro/functions.ipynb
+++ b/py_course/functional_pro/functions.ipynb
@@ -1966,7 +1966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1975,7 +1975,7 @@
        "18"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2225,7 +2225,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#recurtion\n",
+    "#recursion\n",
     "#a function with calls by itself"
    ]
   },
@@ -2257,7 +2257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -2266,7 +2266,7 @@
        "'prime'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2295,7 +2295,7 @@
     "    if num%i==0:\n",
     "        count+=1\n",
     "    return prime1(num,i+1,count)\n",
-    "prime1(2)"
+    "prime1(7)"
    ]
   },
   {
