--- a/py_course/new.ipynb
+++ b/py_course/new.ipynb
@@ -140,6 +140,64 @@
     "print(b)\n",
     "print(c)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fib(n=0,a=0,b=1,sum=0,i=int(input('enter number'))):\n",
+    "    if n<=1:\n",
+    "        print(n)\n",
+    "        fib(n+1,a,b,sum)\n",
+    "    elif n==i:\n",
+    "        return\n",
+    "    else:\n",
+    "        sum=a+b\n",
+    "        print(sum)\n",
+    "        a,b=b,sum\n",
+    "        fib(n+1,a,b,sum)\n",
+    "fib()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "89\n",
+      "{0: 1, 1: 1, 2: 2, 3: 3, 4: 5, 5: 8, 6: 13, 7: 21, 8: 34, 9: 55, 10: 89}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fib(num,coll):\n",
+    "    if num in coll:\n",
+    "        return coll[num]\n",
+    "    else:\n",
+    "        coll[num]=fib(num-1,d)+fib(num-2,d)\n",
+    "        return coll[num]\n",
+    "d={0:1,1:1}\n",
+    "print(fib(10,d))\n",
+    "print(d)"
+   ]
   }
  ],
  "metadata": {
