--- a/py_course/oops.ipynb
+++ b/py_course/oops.ipynb
@@ -2476,19 +2476,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "type object 'sample' has no attribute '__x'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\Shaik Imran\\OneDrive\\Documents\\GitHub\\BASIC_PYTHON\\py_course\\oops.ipynb Cell 72\u001b[0m line \u001b[0;36m9\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#Y131sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     \u001b[39m@classmethod\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#Y131sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     \u001b[39mdef\u001b[39;00m \u001b[39m__display\u001b[39m(\u001b[39mcls\u001b[39m):  \u001b[39m#private behaviour\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#Y131sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m         \u001b[39mprint\u001b[39m(\u001b[39mcls\u001b[39m\u001b[39m.\u001b[39m__x)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#Y131sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39mprint\u001b[39m(sample\u001b[39m.\u001b[39;49m__x)      \u001b[39m#we cannot access private members outside the class\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#Y131sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m sample\u001b[39m.\u001b[39m__display()\n",
-      "\u001b[1;31mAttributeError\u001b[0m: type object 'sample' has no attribute '__x'"
-     ]
+     "data": {
+      "text/plain": [
+       "mappingproxy({'__module__': '__main__',\n",
+       "              '_sample__x': 10,\n",
+       "              '_sample__display': <classmethod(<function sample.__display at 0x00000155744E05E0>)>,\n",
+       "              'o': <classmethod(<function sample.o at 0x00000155744E0160>)>,\n",
+       "              '__dict__': <attribute '__dict__' of 'sample' objects>,\n",
+       "              '__weakref__': <attribute '__weakref__' of 'sample' objects>,\n",
+       "              '__doc__': None})"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -2499,9 +2504,14 @@
     "    @classmethod\n",
     "    def __display(cls):  #private behaviour\n",
     "        print(cls.__x)\n",
+    "    @classmethod\n",
+    "    def o(cls):\n",
+    "        cls.__display()\n",
+    "        \n",
     "\n",
-    "print(sample.__x)      #we cannot access private members outside the class\n",
-    "sample.__display()"
+    "# print(sample.__x)      #we cannot access private members outside the class\n",
+    "# sample.o()\n",
+    "sample.__dict__"
    ]
   },
   {
@@ -2605,6 +2615,208 @@
     "            > Method overriding\n",
     "            > Operator overloading and\n",
     "            > Virtual functions.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#polymorphism\n",
+    "class sample:\n",
+    "    def __init__(self,x):\n",
+    "        self.x=x\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for +: 'sample' and 'sample'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\Shaik Imran\\OneDrive\\Documents\\GitHub\\BASIC_PYTHON\\py_course\\oops.ipynb Cell 78\u001b[0m line \u001b[0;36m3\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#Y140sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m a\u001b[39m=\u001b[39msample(\u001b[39m150\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#Y140sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m b\u001b[39m=\u001b[39msample(\u001b[39m250\u001b[39m)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#Y140sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mprint\u001b[39m(a\u001b[39m+\u001b[39;49mb)\n",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'sample' and 'sample'"
+     ]
+    }
+   ],
+   "source": [
+    "a=sample(150)\n",
+    "b=sample(250)\n",
+    "print(a+b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n",
+      "-10\n",
+      "200\n"
+     ]
+    }
+   ],
+   "source": [
+    "class sample:\n",
+    "    def __init__(self,x):\n",
+    "        self.x=x\n",
+    "    def __add__(self,other):\n",
+    "        return self.x+other.x\n",
+    "    def __sub__(self,other):\n",
+    "        return self.x-other.x\n",
+    "    def __mul__(self,other):\n",
+    "        return self.x*other.x\n",
+    "    \n",
+    "\n",
+    "a=sample(10)\n",
+    "b=sample(20)\n",
+    "print(a+b)\n",
+    "print(a-b)\n",
+    "print(a*b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Binary operators\n",
+    "\n",
+    "+ -->   __add__(self,other)\n",
+    "- -->   __sub__(self,other)\n",
+    "* -->   __mul__(self,other)\n",
+    "/ -->   __trudiv__(self,other)\n",
+    "// -->   __floordiv__(self,other)\n",
+    "% -->   __mod__(self,other)\n",
+    "** -->   __pow__(self,other)\n",
+    ">> -->   __rshift__(self,other)\n",
+    "<< -->   __lshift__(self,other)\n",
+    "& -->   __and__(self,other)\n",
+    "| -->   __or__(self,other)\n",
+    "^ -->   __xor__(self,other)\n",
+    "\n",
+    "comparison operators\n",
+    "== -->   __eq__(self,other)\n",
+    "!= -->   __ne__(self,other)\n",
+    "!= -->   __ne__(self,other)\n",
+    "!= -->   __ne__(self,other)\n",
+    "!= -->   __ne__(self,other)\n",
+    "\n",
+    "\n",
+    "assignment operators\n",
+    "+=  --> __iadd__(self,other)\n",
+    "+=  --> __iadd__(self,other)\n",
+    "+=  --> __iadd__(self,other)\n",
+    "+=  --> __iadd__(self,other)\n",
+    "\n",
+    "uninary operators\n",
+    "-  --> __neg__(self)\n",
+    "+  --> __pos__(self)\n",
+    "~  --> __invert__(self)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "parent price 50\n",
+      "parent price 50\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Over ridding:\n",
+    "class apple:\n",
+    "    price=50\n",
+    "\n",
+    "    @classmethod\n",
+    "    def display_price(cls):\n",
+    "        print('parent price',cls.price)\n",
+    "\n",
+    "apple.display_price()\n",
+    "\n",
+    "class apple1(apple):\n",
+    "    pass\n",
+    "apple1.display_price()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "parent price 50\n",
+      "child price 50\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Over ridding:\n",
+    "class apple:\n",
+    "    price=50\n",
+    "\n",
+    "    @classmethod\n",
+    "    def display_price(cls):\n",
+    "        print('parent price',cls.price)\n",
+    "\n",
+    "apple.display_price()\n",
+    "\n",
+    "class apple1(apple):\n",
+    "    @classmethod                     #method overriding\n",
+    "    def display_price(cls):\n",
+    "        print('child price',cls.price)\n",
+    "\n",
+    "apple1.display_price()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ABSTRACTION:\n",
+    "    1. It is a phenomenon of hidding the internal functionalities of the method from user\n",
+    "    2. Abstraction is used to hidding the internal details or task or functionality from the user\n",
+    "    3. user can access the basic implimentation of the functionality but user cannot see the internal fuctionality of the method\n",
+    "    4. to perform the abstraction we have to use Abstraction class and Abstract method\n",
+    "\n",
+    "    1.Abstract class:\n",
+    "        1. It is a blue print/structure/formate of the other classes \n",
+    "        2. abstract class acts as a guidlines for other classes\n",
+    "        3. It is used to provide the standared structute or interface of methods for different implimentation\n",
+    "        4. abstract class contails one or more than one abstract methods and also normal methods\n",
+    "        5. if you want to create a abstract class we have to inherit the parent abstract class by the help of abc module\n",
+    "\n",
+    "        syntax:\n",
+    "\n",
+    "        from abc import ABC\n",
+    "\n",
+    "        class abc_class(ABC):\n",
+    "            pass\n",
+    "        \n",
+    "        Note:\n",
+    "           1.abc is nothing but abstract module\n",
+    "           2.ABC is nothing but abstract_parent_class\n",
+    "           3.abc_class is nothing but userdefine abstract_class"
    ]
   }
  ],
