--- a/py_course/oops.ipynb
+++ b/py_course/oops.ipynb
@@ -2818,6 +2818,145 @@
     "           2.ABC is nothing but abstract_parent_class\n",
     "           3.abc_class is nothing but userdefine abstract_class"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "26/11/2023\n",
+    "exeptions:\n",
+    "    the exptions are classified into two types of classes\n",
+    "    1.predifined exeption class\n",
+    "    2. user defined exeption class\n",
+    "1.predifined exeption class:\n",
+    "     .predifined exeption classes are designed by python developers\n",
+    "     .each exeption class have unique specification\n",
+    "    \n",
+    "    example: Typeerror,Atribute Error,Value Error,Name Error. etc\n",
+    "2. User defined exption class:\n",
+    "    thes are designed by end users are developers to create user defined exeptions(custom exeptions)\n",
+    "    we have to use parent Exeption class and user defined class\n",
+    "    syntax:\n",
+    "        class Exeption_name(Exeption):\n",
+    "            def __init__(self,msg=None):\n",
+    "                self.msg=msg\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "PysError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mPysError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\Shaik Imran\\OneDrive\\Documents\\GitHub\\BASIC_PYTHON\\py_course\\oops.ipynb Cell 85\u001b[0m line \u001b[0;36m8\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#Y150sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m a\u001b[39m=\u001b[39m\u001b[39m10\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#Y150sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mif\u001b[39;00m a\u001b[39m==\u001b[39m\u001b[39m10\u001b[39m:\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#Y150sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m     \u001b[39mraise\u001b[39;00m PysError\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#Y150sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#Y150sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mbye\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "\u001b[1;31mPysError\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "# 2.user defined exeptions\n",
+    "class PysError(Exception):\n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "\n",
+    "a=10\n",
+    "if a==10:\n",
+    "    raise PysError\n",
+    "else:\n",
+    "    print('bye')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "PysError",
+     "evalue": "raised exception:this is an user defined exception",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mPysError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\Shaik Imran\\OneDrive\\Documents\\GitHub\\BASIC_PYTHON\\py_course\\oops.ipynb Cell 86\u001b[0m line \u001b[0;36m7\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#Y151sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m a\u001b[39m=\u001b[39m\u001b[39m10\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#Y151sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mif\u001b[39;00m a\u001b[39m==\u001b[39m\u001b[39m10\u001b[39m:\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#Y151sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m     \u001b[39mraise\u001b[39;00m PysError(\u001b[39m'\u001b[39m\u001b[39mraised exception:this is an user defined exception\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#Y151sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#Y151sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mbye\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "\u001b[1;31mPysError\u001b[0m: raised exception:this is an user defined exception"
+     ]
+    }
+   ],
+   "source": [
+    "class PysError(Exception):\n",
+    "    def __init__(self,msg=None):\n",
+    "        self.msg=msg\n",
+    "\n",
+    "a=10\n",
+    "if a==10:\n",
+    "    raise PysError('raised exception:this is an user defined exception')\n",
+    "else:\n",
+    "    print('bye')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bye\n"
+     ]
+    }
+   ],
+   "source": [
+    "class PysError(Exception):    #handling the custom exception\n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "try:\n",
+    "    a=11\n",
+    "    if a==10:\n",
+    "        raise PysError('')\n",
+    "    else:\n",
+    "        print('bye')\n",
+    "except PysError:\n",
+    "    print('haii')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "program stopped\n"
+     ]
+    }
+   ],
+   "source": [
+    "#multiple exceptions\n",
+    "try:\n",
+    "    # l=[10,150,'haii',0,34]\n",
+    "    l=eval(input('enter the value'))\n",
+    "    for i in l:\n",
+    "        print(10/i)\n",
+    "except TypeError:\n",
+    "    print('program stopped')\n",
+    "except ZeroDivisionError:\n",
+    "    print(i/10)\n",
+    "except Exception:\n",
+    "    print('invalid')\n",
+    "except:\n",
+    "    print('stop')"
+   ]
   }
  ],
  "metadata": {
