--- a/py_course/flow_control_statements/1.Decisional&Conditional_statements/5.match_case.ipynb
+++ b/py_course/flow_control_statements/1.Decisional&Conditional_statements/5.match_case.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -14,7 +14,7 @@
     }
    ],
    "source": [
-    "n=50\n",
+    "n=102\n",
     "match n:\n",
     "    case 10:\n",
     "        print('hai')\n",
@@ -22,7 +22,7 @@
     "        print('hello')\n",
     "    case 30:\n",
     "        print('hell')\n",
-    "    case _:\n",
+    "    case __:\n",
     "        print('defoult case')"
    ]
   },
