--- a/py_course/functional_pro/practice.ipynb
+++ b/py_course/functional_pro/practice.ipynb
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -488,11 +488,49 @@
     "\n",
     "value=cur1._rows\n",
     "print(value)\n",
+    "\n",
+    "\n",
     "# con.commit()\n",
     "cur1.close()\n",
     "con.close()\n",
     "# print(value)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<pymysql.connections.Connection object at 0x0000024610673C70>\n",
+      "<pymysql.cursors.Cursor object at 0x0000024610673DF0>\n",
+      "(('MILLER', 501, 94), ('BLACK', 502, 98), ('IMRAN', 503, 77), ('HARI', 504, 83), ('IMRANj', 100, 1111))\n",
+      "('MILLER', 501, 94)\n",
+      "('BLACK', 502, 98)\n",
+      "('IMRAN', 503, 77)\n",
+      "('HARI', 504, 83)\n",
+      "('IMRANj', 100, 1111)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pymysql \n",
+    "con=pymysql.connect(host='localhost',user='root',passwd='imran',database='mydb15')\n",
+    "print(con)\n",
+    "cur1=con.cursor()\n",
+    "print(cur1)\n",
+    "query='''select* from student'''\n",
+    "cur1.execute(query)\n",
+    "res=cur1.fetchall() \n",
+    "# res=cur1.fetchone() \n",
+    "# res=cur1.fetchmany(3) \n",
+    "print(res) \n",
+    "for i in res:\n",
+    "    print(i)"
    ]
   }
  ],
