--- a/py_course/sql_con/file1.ipynb
+++ b/py_course/sql_con/file1.ipynb
@@ -27,7 +27,7 @@
     "\n",
     "cus.fetchall()  #it convert sql data to python data and it will fetch all the record\n",
     "\n",
-    "cus.fetchone()  #it convert sql data to python data and it will fetch one the record\n",
+    "cus.fetchone()  #it convert sql data to python data and it will fetch one record\n",
     "\n",
     "cus.fetchmany() #it convert sql data to python data , it will fetch the records based on size\n",
     "\n",
@@ -38,11 +38,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "#configuration\n",
+    "import sqlite3 as sq        #import the sqlite3 module\n",
     "db=sq.connect('student.sqlite3')\n",
     "cur=db.cursor()"
    ]
@@ -170,13 +171,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "def insert_record(sid,name,age,email,phone,address,marks):\n",
     "    query='''insert into student(sid,name,age,email,phone,address,marks)\n",
-    "values(?,?,?,?)'''\n"
+    "values(?,?,?,?,?,?,?)'''\n",
+    "    val=[sid,name,age,email,phone,address,marks]\n",
+    "    cur.execute(query,val)\n",
+    "    print(cur.rowcount,'row created')\n",
+    "    db.commit()\n",
+    "\n",
+    "# insert_record(3,'khan',23,'khan@gmail.com',934543432,'hyd',67)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 'imran', 21, 'imran@gmail.com', 878789252, 'hyd', 77)\n",
+      "(2, 'gopi', 26, 'kumar@gmail.com', 878781235, 'hyd', 98)\n",
+      "(3, 'khan', 23, 'khan@gmail.com', 934543432, 'hyd', 67)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fetch_record():\n",
+    "    query='''select * from student'''\n",
+    "    cur.execute(query)\n",
+    "    for i in cur.fetchall():\n",
+    "        print(i)\n",
+    "# fetch_record()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 row created\n"
+     ]
+    }
+   ],
+   "source": [
+    "def update_record(sid,phone,marks):\n",
+    "    query='''update student set phone=? , marks=? where sid=?'''\n",
+    "    val=[phone,marks,sid]\n",
+    "    cur.execute(query,val)\n",
+    "    print(cur.rowcount,'row created')\n",
+    "    db.commit()\n",
+    "# update_record(3,6542635,54)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 row created\n"
+     ]
+    }
+   ],
+   "source": [
+    "def delete_record(sid):\n",
+    "\n",
+    "    query='''delete from student where sid=?'''\n",
+    "    val=[sid]\n",
+    "    cur.execute(query,val)\n",
+    "    print(cur.rowcount,'row created')\n",
+    "    db.commit()\n",
+    "# delete_record(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main():\n",
+    "    m=int(input('choose the option:\\n1:insert\\n2:fetch\\n3:update\\n:delete\\n5:exit'))\n",
+    "    match m:\n",
+    "        case 1:\n",
+    "            insert_record(int(input('enter the sid')),\n",
+    "                          input('enter the name'),\n",
+    "                          int(input('enter the age')),\n",
+    "                          input('enter the mail'),\n",
+    "                          int(input('enter the phone')),\n",
+    "                          input('enter the address'),\n",
+    "                          int(input('enter the marks')))\n",
+    "        case 2:\n",
+    "            fetch_record()\n",
+    "        \n",
+    "        case 3:\n",
+    "            update_record(int(input('enter the sid')),int(input('enter the phone')),int(input('enter the marks')))\n",
+    "        \n",
+    "        case 4:\n",
+    "            delete_record(int(input('enter the sid')))\n",
+    "        \n",
+    "        case __:\n",
+    "            return\n",
+    "    \n",
+    "    main()\n",
+    "main()\n"
    ]
   }
  ],
